can edit the #@&$ out of your profile

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -116,6 +116,7 @@ html body{
 
 
 
+
 // LANDING PAGE
 
 #imgContainer{
@@ -177,7 +178,7 @@ html body{
   position:relative;
   display:inline-block;
   width:70%;
-  #profilePic.well{
+  #photos.well{
     position:relative;
     color:inherit;
     background:inherit;
@@ -200,7 +201,7 @@ html body{
     background:inherit;
     width:100%;
   }
-  #profilePic, #info, #about{
+  #photos, #info, #about{
     btn-primary{
       border-color:none;
     }
@@ -224,7 +225,7 @@ html body{
 
 
 // TEXT AREAS LOL
-#modalText{
+.modalText{
   resize:none;
 }
 #messageText{
