--- a/app/views/users/profile/pic.jade
+++ b/app/views/users/profile/pic.jade
@@ -1,17 +1,5 @@
-#profilePic.well
-  h6 profilePic
-  if(!isOwner)
-    button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#picModal')
-      | Edit
-
-#picModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='picModalLabel', aria-hidden='true')
-  .modal-dialog
-    .modal-content
-      .modal-header
-        button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-        h4#picModalLabel.modal-title Pic
-      .modal-body
-        textarea#modalText(rows=10, cols=89)
-      .modal-footer
-        button.btn.btn-default(type='button', data-dismiss='modal') Close
-        button.btn.btn-primary(type='button') Save changes
+- var profilePic = owner.profilePic ? 'users/' + owner._id + '/' + owner.profilePic : 'default2.jpeg';
+img(src='/img/#{profilePic}' style='width: 100%; height: 100%;')
+- if(locals.user.isOwner(owner._id))
+  button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#picModal')
+    | Edit
