--- a/app/less/app.less
+++ b/app/less/app.less
@@ -158,7 +158,6 @@ html body{
 
 
 
-
 // SEARCH PAGE YALL
 
 #results{
@@ -268,6 +267,7 @@ html body{
     height:150px;
   }
   #info{
+    style:none;
     position:relative;
     color:inherit;
     background:inherit;
