pushing for carter

--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -23,6 +23,7 @@ block content
       option(name='100' value='100') 100 Miles
       option(name='150' value='150') 150 Miles
       option(name='anywhere' value='anywhere') Anywhere
+    input#game(name= 'game')
 
     button#filterSpecifity filter matches
 
