--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -5,31 +5,6 @@ block content
 
 
   h1(style='color:white; text-align:center') Browse Locals in Your Area!
-  #browse.well
-    select#orientation.form-control(name='orientation')
-      option(name='straight' value='straight') Straight
-      option(name='gay', value='gay') Gay
-      option(name='bi', value='bi') Bi
-
-    select#sex.form-control(name='sex')
-      option(name='male' value='male') Male
-      option(name='female', value='female') Female
-
-    //- select#games.selectpicker
-
-    select#distance.form-control(name='distance')
-      option(name='25' value='25') 25 Miles
-      option(name='50' value='50') 50 Miles
-      option(name='100' value='100') 100 Miles
-      option(name='150' value='150') 150 Miles
-      option(name='anywhere' value='anywhere') Anywhere
-    input#game(name= 'game')
-
-    button#filterSpecifity filter matches
-
-
-
-
 
 
   #carouselBrowse.carousel.slide(data-ride='carousel')
@@ -60,7 +35,33 @@ block content
 
 
 
-  #filteredMatches
+
+
+  #browse.well
+    select#orientation.form-control(name='orientation')
+      option(name='straight' value='straight') Straight
+      option(name='gay', value='gay') Gay
+      option(name='bi', value='bi') Bi
+
+    select#sex.form-control(name='sex')
+      option(name='male' value='male') Male
+      option(name='female', value='female') Female
+
+    //- select#games.selectpicker
+
+    select#distance.form-control(name='distance')
+      option(name='25' value='25') 25 Miles
+      option(name='50' value='50') 50 Miles
+      option(name='100' value='100') 100 Miles
+      option(name='150' value='150') 150 Miles
+      option(name='anywhere' value='anywhere') Anywhere
+
+    input#game(name= 'game', placeholder="Favorite Game")
+
+    button#filterSpecifity filter matches
+
+
+  #filteredMatches.well.well-lg
 
 
 
