worked in old routes to include a games route

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -47,7 +47,9 @@ html
                   li
                     a.glyphicon.glyphicon-user(href='/users/#{locals.user._id}') Profile
                 li
-                  a.glyphicon.glyphicon-search(href='/users/browse') Browse
+                  a.glyphicon.glyphicon-search(href='/users') Browse
+                li
+                  a.glyphicon.glyphicon-search(href='/games') Games
 
 
               ul.nav.navbar-nav.navbar-right
