--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -56,7 +56,7 @@ block content
       option(name='150' value='150') 150 Miles
       option(name='anywhere' value='anywhere') Anywhere
 
-    input#game(name= 'game', placeholder="Favorite Game")
+    input#game(placeholder="Favorite Game", name= 'game')
 
     button#filterSpecifity filter matches
 
