--- a/app/views/users/dashboard.jade
+++ b/app/views/users/dashboard.jade
@@ -4,25 +4,19 @@ extends ../shared/template
 block content
   //- h3#carouselTitle Gamers near you!
 
+
   #carousel-example-generic.carousel.slide(data-ride='carousel')
     ol.carousel-indicators
-      li.active(data-target='#carousel-example-generic', data-slide-to='0')
-      li(data-target='#carousel-example-generic', data-slide-to='1')
-      li(data-target='#carousel-example-generic', data-slide-to='2')
+      each user, index in users
+        li(class='#{!index ? "active" : ""}', data-target='#carousel-example-generic', data-slide-to=index)
 
     .carousel-inner
-      .item.active
-        img(src='/img/default.jpg', alt='/img/default.jpg')
-        .carousel-caption
-          | match.name
-      .item
-        img(src='/img/default2.jpeg', alt='/img/default.jpg')
-        .carousel-caption
-          | specific caption2
-      .item
-        img(src='/img/default3.jpeg', alt='/img/default.jpg')
-        .carousel-caption
-          | specific caption3
+      each user, index in users
+        .item(class='#{!index ? "active" : ""}')
+          .carousel-img
+            img(src='/img/users/#{user._id}/#{user.profilePic}', alt='/img/default.jpg')
+            .carousel-caption
+              p= user.username
       |'
 
     a.left.carousel-control(href='#carousel-example-generic', data-slide='prev')
