--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -49,7 +49,7 @@ html
                 li
                   a.glyphicon.glyphicon-search(href='/users') Browse
                 li
-                  a.glyphicon.glyphicon-search(href='/games') Games
+                  a.glyphicon.glyphicon-floppy-disk(href='/games') Games
 
 
               ul.nav.navbar-nav.navbar-right
