working on filteredMatches

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -128,8 +128,12 @@ html body{
     display:inline-block;
     text-align:center;
     width:200px;
-    height:100px;
+    height:200px;
     overflow:hidden;
+    img{
+      height: 50px;
+      width: 50px;
+    }
   }
 }
 
