filtered matches view done

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -112,7 +112,7 @@ html body{
   width:50%;
   height:auto;
   background-image:none;
-  background-color:#313131;
+  background-color:#1A1A1A;
   border: 1px solid black;
   margin-right:25%;
   margin-left:25%;
@@ -130,9 +130,24 @@ html body{
     width:200px;
     height:200px;
     overflow:hidden;
-    img{
-      height: 50px;
-      width: 50px;
+    .matchesImg{
+      height: 100px;
+      width: 100px;
+      -webkit-column-count: 1;
+      -webkit-column-gap:   0px;
+      -moz-column-count:    1;
+      -moz-column-gap:      0px;
+      column-count:         1;
+      column-gap:           0px;
+      img{
+        display:block;
+        position: relative;
+        right: 25px;
+        margin-left: 50%;
+        right: 20px;
+        height: auto !important;
+        width:100% !important;
+      }
     }
   }
 }
