--- a/app/less/app.less
+++ b/app/less/app.less
@@ -113,7 +113,7 @@ html body{
   width:50%;
   height:auto;
   background-image:none;
-  background-color:#1A1A1A;
+  background-color:#202020;
   border: 1px solid black;
   margin-right:25%;
   margin-left:25%;
@@ -328,6 +328,7 @@ html body{
   right: 134px;
 }
 
+
 // END DASHBOARD
 
 
@@ -346,6 +347,16 @@ html body{
     background:inherit;
     width:15%;
     height:150px;
+    -webkit-column-count: 1;
+    -webkit-column-gap:   0px;
+    -moz-column-count:    1;
+    -moz-column-gap:      0px;
+    column-count:         1;
+    column-gap:           0px;
+    img{
+      width: 100% !important;
+      height: auto !important;
+    }
   }
   #info.well{
     text-align:center;
