--- a/app/views/users/profile/pic.jade
+++ b/app/views/users/profile/pic.jade
@@ -1,5 +1,5 @@
 - var profilePic = owner.profilePic ? 'users/' + owner._id + '/' + owner.profilePic : 'default2.jpeg';
-img(src='/img/#{profilePic}' style='width: 100%; height: 100%;')
+img(src='/img/#{profilePic}')
 - if(locals.user.isOwner(owner._id))
   button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#picModal')
     | Edit
