--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -62,12 +62,12 @@ html
                       li
                         .row
                           .col-md-12
-                            .message-from(data-toggle='modal', data-target='#fakeModal')
+                            .message-from
                               img.from.from-pic(src='/img/default.jpg')
                               .message-body
                                 | So I like think you're pretty cool and stuff...
                             hr
-                            .message-from(data-toggle='modal', data-target='#fakeModal')
+                            .message-from
                               img.from.from-pic(src='/img/default.jpg')
                               .message-body
                                 | So I like think you're pretty cool and stuff...
@@ -150,15 +150,14 @@ html
 
 
 
-    #fakeModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='fakeLabel', aria-hidden='true')
+    #openMessageModal(data-toggle='modal', data-target='#messageModal' style='visibility: hidden')
+    #messageModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true' data-userid=locals.user._id.toString())
       .modal-dialog
         .modal-content
           .modal-header
             button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-            h4#fakeLabel.modal-title Message Subject variable
-          .modal-body
-              #messages You will view your messages here
-              //1 col = 6px
+            h4#fakeLabel.modal-title Loading...
+          .modal-body ...
           .modal-footer
             textarea#messageText(rows=1, cols=50)
             button.btn.btn-primary(type='button') Send
