--- a/app/less/app.less
+++ b/app/less/app.less
@@ -122,7 +122,7 @@ html body{
   position:relative;
   .user.well{
     border: 1px groove black;
-    background-color:#202020;
+    background-color:#393939;
     background-image:none;
     color:white;
     margin-right:10px;
@@ -377,8 +377,24 @@ html body{
 .search{
   position: relative;
   margin-left:50%;
-  right: 134px;
+  right: 7.5em;
+  width: 15em;
+  margin-bottom: 1em;
+
 }
+
+.dashButton{
+  position: absolute;
+  top: 50%;
+  right:45%;
+  width: 150px;
+  height: 140px;
+}
+.activate{
+  color: white;
+  margin-bottom: 1em;
+}
+
 
 
 // END DASHBOARD
@@ -484,10 +500,14 @@ html body{
 }
 
 .chatroom.well{
+  background-image: none;
+  background-color:#202020;
   width: 80%;
   margin: auto;
+  border-color: black;
   .chat{
     text-align: center;
+    color: white;
   }
 }
 
