working on stufff

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -151,7 +151,7 @@ html
 
 
     #openMessageModal(data-toggle='modal', data-target='#messageModal' style='visibility: hidden')
-    #messageModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true' data-userid=locals.user._id.toString())
+    //- #messageModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true' data-userid=locals.user._id.toString())
       .modal-dialog
         .modal-content
           .modal-header
