--- a/app/views/users/dashboard.jade
+++ b/app/views/users/dashboard.jade
@@ -26,6 +26,6 @@ block content
       span.glyphicon.glyphicon-chevron-right
 
   .heading
-    h1 Search for Gamer Matches
+    h1(style='color:white') Search for Gamer Matches
   img.search(src='/img/player2copy.jpg')
   include ../games/chatrooms
