--- a/app/views/users/profile/photos.jade
+++ b/app/views/users/profile/photos.jade
@@ -3,6 +3,6 @@ form.form-group
   if photos
     each photo in photos
       .profilePhoto
-        img(src='/img/users/#{locals.user._id}/#{photo}' style='width: 100px; height: 80px;')
+        img#modalImg(src='/img/users/#{locals.user._id}/#{photo}' style='width: 100px; height: 80px;')
         button.btn.btn-danger.delete-photo X
         button.btn.btn-primary.make-profile-pic Default
