shame upon your whole famiree

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -35,6 +35,10 @@ html body{
   margin-right:5px;
 }
 
+body{
+  font-family: 'Press Start 2P', cursive !important;
+}
+
 // END STOCK CSS
 
 
@@ -310,6 +314,13 @@ html body{
 
 // LANDING PAGE
 
+#headText{
+  text-align:center;
+  color:white;
+  margin-top:25px;
+  margin-bottom:-65px;
+}
+
 #imgContainer{
   position:relative;
   margin-top:5%;
@@ -323,9 +334,11 @@ html body{
   }
 
   #logo{
+    position: relative;
     height:30%;
     width:40%;
-    margin: 0% 30%;
+    margin-left: 50%;
+    right: 20%;
   }
 }
 
