--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,6 +1,7 @@
 extends ../shared/template
 
 block content
+  h2#headText FIND YOUR
   #imgContainer
     img#logo(src='img/player2.jpg')
     a#divButton(href='/users')
