--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -18,6 +18,7 @@ html
     link(href='/fonts/glyphicons-halflings-regular.ttf' rel='font', type='text/css')
     link(href='/fonts/fontawesome-webfont.tff', rel='font', type='text/css')
     link(href='/fonts/fontawesome-webfont.woff', rel='font', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Press+Start+2P', rel='stylesheet' type='text/css')
 
 
   body
