--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -18,7 +18,7 @@ html
     link(href='/fonts/glyphicons-halflings-regular.ttf' rel='font', type='text/css')
     link(href='/fonts/fontawesome-webfont.tff', rel='font', type='text/css')
     link(href='/fonts/fontawesome-webfont.woff', rel='font', type='text/css')
-
+    link(href='/fonts/SILKWONDER,tff', rel='font', type='text/css')
 
   body
     .container
