--- a/app/views/users/dashboard.jade
+++ b/app/views/users/dashboard.jade
@@ -27,6 +27,6 @@ block content
 
   .heading
     //- h1.activate Activate Your Love Life
-  img.search(src='/img/danger.png')
+  img.search(src='/img/dangerous.png')
   a.dashButton(href='/users')
   include ../games/chatrooms
