--- a/app/views/messages/index.jade
+++ b/app/views/messages/index.jade
@@ -3,10 +3,10 @@
   h4#fakeLabel.modal-title Messages
 .modal-body
   each message in messages
-    - var x = message.senderId.toString() === locals.user._id.toString() ? 'To: ' + message.recipientId : 'From: ' + message.senderId;
+    - var x = message.senderId.toString() === locals.user._id.toString() ? 'To' : 'From';
     ul
-      li= x
+      li #{x}: #{chatPartner.username}
       li= message.body
 .modal-footer
   textarea#messageText(rows=1, cols=50)
-  button.btn.btn-primary(type='button') Send
+  button.btn.btn-primary(type='button') Send Message
