--- a/app/views/users/index.jade
+++ b/app/views/users/index.jade
@@ -52,7 +52,7 @@ block content
 
     input#game(placeholder="Favorite Game", name= 'game')
 
-    button#filterSpecifity filter matches
+    button#filterSpecifity Filter Matches
 
 
   #filteredMatches.well.well-lg
