--- a/app/views/users/profile/about.jade
+++ b/app/views/users/profile/about.jade
@@ -1,4 +1,4 @@
-h6 about
+h6 About
 | #{owner.about}
 - if(locals.user.isOwner(owner._id))
   button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#aboutModal')
