--- a/app/less/app.less
+++ b/app/less/app.less
@@ -424,6 +424,36 @@ body{
 
 
 // PROFILE PAGE
+.profilePhoto{
+  display: inline-block;
+  margin-right:20px;
+  margin-top:5px;
+  #modalImg{
+    display: block;
+  }
+  .delete-photo{
+    font-size:8px;
+    border:1px solid black;
+    background-color:#202020;
+    color:white;
+    width:30px;
+    margin-top:2px;
+  }
+  .make-profile-pic{
+    font-size:8px;
+    text-align:left;
+    padding:5px;
+    border:1px solid black;
+    background-color:#202020;
+    color:white;
+    margin-left: 2px;
+    margin-top:2px;
+  }
+  .make-profile-pic:hover, .delete-photo:hover{
+    color: gray;
+  }
+}
+
 #profile.well{
   color:white;
   background-image:none;
@@ -446,8 +476,9 @@ body{
     column-gap:           0px;
     img{
       width: 100% !important;
-      height: auto !important;
+      height: 100% !important;
     }
+
   }
   #info.well{
     text-align:center;
@@ -536,6 +567,12 @@ body{
 
 .modal{
   color:black;
+}
+
+.modal-footer{
+  button{
+    margin-top: 2em;
+  }
 }
 
 #containGames{
