--- a/app/views/messages/index.jade
+++ b/app/views/messages/index.jade
@@ -8,5 +8,5 @@
       li #{x}: #{chatPartner.username}
       li= message.body
 .modal-footer
-  textarea#messageText(rows=1, cols=45)
-  button.btn.btn-primary(type='button') Send Message
+  textarea#messageText(rows=1, cols=50)
+  button#sendMessage.btn.btn-primary(type='button' data-chatpartnerid=chatPartner._id.toString()) Send Message
