--- a/app/views/messages/index.jade
+++ b/app/views/messages/index.jade
@@ -9,4 +9,4 @@
       li= message.body
 .modal-footer
   textarea#messageText(rows=1, cols=45)
-  button.btn.btn-primary(type='button') Send Message
+  button#sendMessage.btn.btn-primary(type='button') Send Message
