--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -4,7 +4,7 @@ block content
 
 
 
-  h1(style='color:white; text-align:center') Browse Locals in Your Area!
+  h1(style='color:white; text-align:center') Browse Players
   #browse.well
     select#orientation.form-control(name='orientation')
       option(name='straight' value='straight') Straight
