--- a/app/views/users/index.jade
+++ b/app/views/users/index.jade
@@ -4,7 +4,7 @@ block content
 
 
 
-  h1(style='color:white; text-align:center') Browse Locals in Your Area!
+  h1(style='color:white; text-align:center') Rescue the Princess.
 
 
   #carousel-example-generic.carousel.slide(data-ride='carousel')
@@ -56,12 +56,6 @@ block content
 
 
   #filteredMatches.well.well-lg
-
-
-
-
-
-
 
 
 
