--- a/app/views/users/index.jade
+++ b/app/views/users/index.jade
@@ -7,25 +7,7 @@ block content
   h1(style='color:white; text-align:center') Browse Locals in Your Area!
 
 
-  #carousel-example-generic.carousel.slide(data-ride='carousel')
-    ol.carousel-indicators
-      each user, index in users
-        li(class='#{!index ? "active" : ""}', data-target='#carousel-example-generic', data-slide-to=index)
-
-    .carousel-inner
-      each user, index in users
-        .item(class='#{!index ? "active" : ""}')
-          .carousel-img
-            a(href='/users/#{user._id}')
-              img(src='/img/users/#{user._id}/#{user.profilePic}', alt='/img/default.jpg')
-              .carousel-caption
-                p= user.username
-      |'
-
-    a.left.carousel-control(href='#carousel-example-generic', data-slide='prev')
-        span.glyphicon.glyphicon-chevron-left
-      a.right.carousel-control(href='#carousel-example-generic', data-slide='next')
-        span.glyphicon.glyphicon-chevron-right
+  include ../shared/userCarousel
 
 
 
